--- a/css/main.css
+++ b/css/main.css
@@ -32,65 +32,33 @@ width:100%;
 border:2px solid black;
 padding:10px;
 }
-/*Navigation*/
-.sidebar {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #111;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
-  }
-  
-.sidebar a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    transition: 0.3s;
-  }
-  
-  .sidebar a:hover {
-    color: #f1f1f1;
-  }
-  
-  .sidebar .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-  }
-  
-  .openbtn {
-    font-size: 20px;
-    cursor: pointer;
-    background-color: #111;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-  }
-  
-  .openbtn:hover {
-    background-color: #444;
-  }
-  
-  #main {
-    transition: margin-left .5s;
-    padding: 16px;
-  }
-  
-  /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-  @media screen and (max-height: 450px) {
-    .sidebar {padding-top: 15px;}
-    .sidebar a {font-size: 18px;}
-  }
-/*    */
+/*Loader*/
+.loader {
+  position: absolute;
+  z-index: 1;
+  display: none;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  margin: -70px auto;
+  margin-left:350px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+/*Loader ends*/
 .first-section{
     background-color: #B8336A;
     border-radius: 5px;
@@ -104,6 +72,7 @@ padding:10px;
     background-color: #C490D1;
     border-radius: 5px;
 }
+
 input {
    width:30em;
    height:3em;
@@ -114,9 +83,17 @@ input {
 .search-button{
     width: 4.5em;
     height: 3em;
-    border-radius: 5px; 
+    border-radius:7px; 
     background: url(../img/search.jpg)repeat;  
     font-weight: bold;
+}
+.errorMessage{
+color:red;
+font-style:italic;
+font-weight: bold;
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+line-height: 0.5em;
+word-spacing: 0.5em;
 }
 .footer{
 width: 100%;
