--- a/css/main.css
+++ b/css/main.css
@@ -1,22 +1,44 @@
-*{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
-    font-size: 1em;
-    text-align: center;
-    line-height:2em; }
+*{ 
+  line-height:2.5em;
+
+ }
+
 
 body{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* */
     font-style: italic;
     color: black;
     font-size:1em;
     text-align:center;
+    background: url(../img/world-backgrounda.jpg)repeat-y;
+    font-family: 'Noto Serif', serif;
 
 }
 .header{
     width: 100%;
-    height:18em;
+    height:10em;
     background-image: linear-gradient(90deg,cornflowerblue, rgb(2, 2, 133)); 
-    border: 1px solid black
+    color: white;
+    border-radius: 0px 0px 5px 5px;
+    box-shadow: 2px 2px 15px whitesmoke;
+    font-family: 'Lobster', cursive;
+}
+
+h1{
+    font-style: italic;
+    width:auto;
+    font-size: 5em;
+    text-align: left;
+    color: white;
+    margin: 0px auto;
+    box-sizing: border-box;
+}
+.logo-img{
+float: left;
+width:100px;
+height:100px;
+border-radius: 50%;
+margin:3.5em auto;
 }
 .main-wrapper{
 display:grid;
@@ -28,8 +50,11 @@ border-radius: 5px;
 margin:3em auto;
 width:80%; 
 height:60em;
-border:2px solid black;
+
+/* border:2px solid black; */
 padding:10px;
+font-weight: lighter;
+
 }
 /*Loader*/
 .loader {
@@ -59,12 +84,12 @@ padding:10px;
 }
 /*Loader ends*/
 .first-section{
-    background-color: #B8336A;
+   color:white;
     border-radius: 5px;
 }
 
 .second-section{
-    background-color: #A0D2DB;
+    color:white;
     border-radius: 5px;
 }
 .weather{
@@ -80,20 +105,19 @@ padding:10px;
   
 }
 .weather div{
-    border:1px solid black;
+    border:1px solid white;
     width:100%;
     height:250px; 
     border-radius: 15PX 0px; 
-
 }
 .pop-up{
     display:none;
 }
 
-.third-section{
+/* .third-section{
     background-color: #C490D1;
     border-radius: 5px;
-}
+} */
 
 input {
    width:30em;
@@ -101,13 +125,29 @@ input {
    border:0px  black;
    border-style: ridge;
    border-radius:5px;
+   text-align: center;
+   font-size: 1em;
+   
+}
+input[placeholder]{
+    font-family: 'Supermercado One', cursive;
+    
 }
 .search-button{
     width: 4.5em;
     height: 3em;
     border-radius:7px; 
-    background: url(../img/search.jpg)repeat;  
+    background: #111;
+    border:1px solid blue; 
+background: url(../img/search.jpg)repeat;  
     font-weight: bold;
+    color:black;
+    font-size: 1em;
+}
+.search-button:hover{
+    background: blue;
+    color:white;
+    box-shadow:2px 1px 5px #fbfbff;
 }
 .errorMessage{
 color:red;
@@ -118,8 +158,162 @@ line-height: 0.5em;
 word-spacing: 0.5em;
 }
 .footer{
-width: 100%;
-height:18em;
+width:100%;
+height:8em;
 color: white;
-background: #111;
+background:#3b3b3b;
+border-top:3px solid white;
+}
+
+/*MEDIA QUERY*/
+@media all and (max-width:700px){
+  
+h1{
+    font-size:3em;
+    margin-top:0em auto;
+    padding-top:0.8em;
+}
+
+.main-wrapper{
+    display:grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr ;
+    grid-gap:5px;
+    box-sizing: border-box;
+    border-radius: 5px;
+    margin:3em auto;
+    width:100%; 
+    height:60em;
+   /* border:2px solid black; */
+    padding:10px;
+    font-weight: lighter;
+    
+    }
+
+input {
+    width:25em;
+    height:3em;
+    border:0px  black;
+    border-style: ridge;
+    border-radius:5px;
+    text-align: center;
+    font-size: 0.7em;
+    
+ }
+ .search-button{
+    width: 4.5em;
+    height: 2.5em;
+    border-radius:7px; 
+    border:1px solid blue; 
+    background: url(../img/search.jpg)repeat;  
+    font-weight: bold;
+    color:black;
+    font-size: 1em;
+    margin-top:0.5em;
+    box-sizing: border-box;
+}
+.logo-img{
+height: 50%;
+}
+.first-section{
+    width:100%;
+    margin: 0px auto; 
+}
+.weather{
+    display:grid;
+    /* grid-row:repeat(autofit,Minmax(100px,1fr));
+    grid-auto-columns: 2fr 2fr 2fr 2fr; */
+    grid-template-columns:1fr 1fr ;
+    grid-template-rows: 1fr 1fr;
+    grid-gap: 15px;
+    width: 80%;
+    margin:50px auto;
+   
+  
+}
+.weather div{
+    border:1px solid white;
+    width:100%;
+    height:250px; 
+    border-radius: 15pX 0px; 
+}
+}
+
+
+
+/*412 screen size  */
+@media all and (max-width:412px){
+.header{
+    width:100%;
+    box-sizing: border-box;
+}
+.main-wrapper{
+    display:grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr ;
+    grid-gap:5px;
+    box-sizing: border-box;
+    border-radius: 5px;
+    margin:3em auto;
+    width:100%; 
+    height:60em;
+    padding:10px;
+    font-weight: lighter;
+    
+    }
+.main-wrapper{
+    width:100%;  
+}
+.first-section{
+    margin:0px auto;
+    width:100%; 
+    box-sizing: border-box; 
+}
+input {
+    width:15em;
+    height:3em;
+    border:0px  black;
+    border-style: ridge;
+    border-radius:5px;
+    text-align: center;
+    font-size: 0.5em;
+    
+ }
+ .search-button{
+    width: 4em;
+    height: 2em;
+    border-radius:7px; 
+    background: #111;
+    border:1px solid blue; 
+    background: url(../img/search.jpg)repeat;  
+    font-weight: bold;
+    color:black;
+    font-size: 0.7em;
+}
+h1{
+    font-size: 1.5em;
+}
+.weather{
+    display:grid;
+    /* grid-row:repeat(autofit,Minmax(100px,1fr));
+    grid-auto-columns: 2fr 2fr 2fr 2fr; */
+    grid-template-columns:1fr 1fr ;
+    grid-template-rows: 1fr 1fr;
+    grid-gap: 15px;
+    width: 80%;
+    margin:50px auto;
+   
+  
+}
+.weather div{
+    border:1px solid white;
+    width:100%;
+    height:250px; 
+    border-radius: 15pX 0px; 
+}
+.footer{
+    width: 100%;
+   
+}
+
 }
