Toggle between temperature units celsius/fahrenheit

--- a/css/main.css
+++ b/css/main.css
@@ -43,14 +43,14 @@ margin:3.5em auto;
 }
 .main-wrapper{
 display:grid;
-grid-template-rows: 1fr 1fr;
+grid-template-rows: 1fr;
 grid-template-columns: 1fr ;
 grid-gap:10px;
 box-sizing: border-box;
 border-radius: 5px;
 margin:3em auto;
 width:80%; 
-height:auto;
+height:fit-content;
 
 /* border:2px solid black; */
 padding:10px;
@@ -121,6 +121,7 @@ font-weight: lighter;
     display:none;
 }
 
+
 input {
    width:30em;
    height:3em;
@@ -145,6 +146,7 @@ background: url(../img/search.jpg)repeat;
     font-weight: bold;
     color:black;
     font-size: 1em;
+   
 }
 .search-button:hover{
     background: cornflowerblue;
@@ -170,7 +172,6 @@ box-shadow:2px 2px 6px cornflowerblue;
     font-style: italic;
     transition: 1s;
     transition-timing-function: linear;
-    transform: scale(1.05);
     cursor: pointer;
 
 }
@@ -181,6 +182,77 @@ i{
    font-size:48px;
 }
 
+
+/* Toggle button */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 17px;
+    float: right;
+    
+  }
+  .Celcius{
+      float: left;
+  }
+  
+  .switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 10px;
+    width: 10px;
+    left: 0px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
+  
+/* Toggle Button Ends */
+
+
+
 .fa-facebook-square:hover{
     transition: 0.8s;
     transform: scale(1.05);
@@ -190,8 +262,12 @@ i{
     opacity: 0.7;
     color:white;
   }
+  .notable-landmark{
+
+  }
 
 .footer{
+    position: relative;
 width:100%;
 height:8em;
 color: white;
@@ -360,7 +436,9 @@ input {
     height:250px; 
     border-radius: 15pX 0px; 
 }
+
 .footer{
+    position: relative;
     width: 100%;
    
 }
