--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,6 @@
 
 
 body{
-    /* */
     color: black;
     font-size:1em;
     text-align:center;
@@ -14,6 +13,7 @@ body{
 
 }
 .header{
+    display: block;
     width: 100%;
     height:10em;
     background-image: linear-gradient(90deg,cornflowerblue, rgb(2, 2, 133)); 
@@ -21,19 +21,17 @@ body{
     border-radius: 0px 0px 5px 5px;
     box-shadow: 2px 2px 15px whitesmoke;
     font-family: 'Lobster', cursive;
- 
-   
 }
 
 h1{
-     width:auto;
+     width: auto;
     font-size: 5em;
-    text-align: left;
+    float: left;
     color: white;
     margin: 0px auto;
-    box-sizing: border-box;
-   
+    box-sizing: border-box; 
 }
+
 .logo-img{
 float: left;
 width:100px;
@@ -51,8 +49,6 @@ border-radius: 5px;
 margin:3em auto;
 width:80%; 
 height:fit-content;
-
-/* border:2px solid black; */
 padding:10px;
 font-weight: lighter;
 
@@ -107,6 +103,7 @@ font-weight: lighter;
     grid-template-rows: 1fr;
     grid-gap: 15px;
     width: 80%;
+    height: auto;
     margin:50px auto;
    
   
@@ -190,7 +187,6 @@ i{
     width: 40px;
     height: 17px;
     float: right;
-    
   }
   .Celcius{
       float: left;
@@ -267,13 +263,58 @@ i{
   }
 
 .footer{
-    position: relative;
-width:100%;
-height:8em;
-color: white;
-background:#3b3b3b;
-border-top:3px solid white;
-}
+    width:100%;
+    height:fit-content;
+    color: white;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background:#111;
+    box-shadow: 2px -1px 5px whitesmoke;
+    }
+    .footer{
+        display:grid;
+        grid-template-columns:1fr 1fr 1fr;
+        grid-template-rows: 2fr 1fr; 
+        grid-gap: 10px;
+        color: white
+        }
+    .footer a{
+        color: #aaa;
+        text-decoration: none;
+    }
+    footer div a{
+        display: block;
+        margin: 0px;
+        font-family: 'Supermercado One', cursive;
+    }
+    .footer a:hover{
+        color: white;  
+    }
+   .footer h3{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: lighter;
+    }
+    footer div{
+        margin:10px;
+        box-sizing: border-box;
+    }
+    .footer-3{
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        margin: 50px auto;
+    }
+    .footer-3 i{
+        font-size: 48px;
+    }
+    .footer-3:hover{
+        opacity:0.7;
+        transition: .2s;
+    }
+    .footer-4{
+        grid-column: 1/4;
+        margin:auto auto;
+        line-height: 1.25em;
+    }
 
 /*MEDIA QUERY*/
 @media all and (max-width:700px){
@@ -293,8 +334,7 @@ h1{
     border-radius: 5px;
     margin:3em auto;
     width:100%; 
-    height:60em;
-   /* border:2px solid black; */
+    height:fit-content;
     padding:10px;
     font-weight: lighter;
     
@@ -351,7 +391,7 @@ height: 50%;
 
 
 
-/*412 screen size  */
+/* Mobiles less than and equal to 412 screen size  */
 @media all and (max-width:412px){
 
 
@@ -368,21 +408,20 @@ h1{
 }
 .main-wrapper{
     display:grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr;
     grid-template-columns: 1fr ;
     grid-gap:5px;
     box-sizing: border-box;
     border-radius: 5px;
     margin:3em auto;
     width:100%; 
-    height:60em;
+    height:fit-content;
+    height: auto;
     padding:10px;
     font-weight: lighter;
     
     }
-.main-wrapper{
-    width:100%;  
-}
+
 .map-section{
     margin:0px auto;
     width:100%; 
