--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@
 
 
 body{
+    /* */
     color: black;
     font-size:1em;
     text-align:center;
@@ -13,7 +14,6 @@ body{
 
 }
 .header{
-    display: block;
     width: 100%;
     height:10em;
     background-image: linear-gradient(90deg,cornflowerblue, rgb(2, 2, 133)); 
@@ -21,17 +21,19 @@ body{
     border-radius: 0px 0px 5px 5px;
     box-shadow: 2px 2px 15px whitesmoke;
     font-family: 'Lobster', cursive;
+ 
+   
 }
 
 h1{
-     width: auto;
+     width:auto;
     font-size: 5em;
-    float: left;
+    text-align: left;
     color: white;
     margin: 0px auto;
-    box-sizing: border-box; 
+    box-sizing: border-box;
+   
 }
-
 .logo-img{
 float: left;
 width:100px;
@@ -49,6 +51,8 @@ border-radius: 5px;
 margin:3em auto;
 width:80%; 
 height:fit-content;
+
+/* border:2px solid black; */
 padding:10px;
 font-weight: lighter;
 
@@ -103,7 +107,6 @@ font-weight: lighter;
     grid-template-rows: 1fr;
     grid-gap: 15px;
     width: 80%;
-    height: auto;
     margin:50px auto;
    
   
@@ -187,6 +190,7 @@ i{
     width: 40px;
     height: 17px;
     float: right;
+    
   }
   .Celcius{
       float: left;
@@ -263,58 +267,13 @@ i{
   }
 
 .footer{
-    width:100%;
-    height:fit-content;
-    color: white;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background:#111;
-    box-shadow: 2px -1px 5px whitesmoke;
-    }
-    .footer{
-        display:grid;
-        grid-template-columns:1fr 1fr 1fr;
-        grid-template-rows: 2fr 1fr; 
-        grid-gap: 10px;
-        color: white
-        }
-    .footer a{
-        color: #aaa;
-        text-decoration: none;
-    }
-    footer div a{
-        display: block;
-        margin: 0px;
-        font-family: 'Supermercado One', cursive;
-    }
-    .footer a:hover{
-        color: white;  
-    }
-   .footer h3{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: lighter;
-    }
-    footer div{
-        margin:10px;
-        box-sizing: border-box;
-    }
-    .footer-3{
-        width: 100px;
-        height: 100px;
-        border-radius: 50%;
-        margin: 50px auto;
-    }
-    .footer-3 i{
-        font-size: 48px;
-    }
-    .footer-3:hover{
-        opacity:0.7;
-        transition: .2s;
-    }
-    .footer-4{
-        grid-column: 1/4;
-        margin:auto auto;
-        line-height: 1.25em;
-    }
+    position: relative;
+width:100%;
+height:8em;
+color: white;
+background:#3b3b3b;
+border-top:3px solid white;
+}
 
 /*MEDIA QUERY*/
 @media all and (max-width:700px){
@@ -334,7 +293,8 @@ h1{
     border-radius: 5px;
     margin:3em auto;
     width:100%; 
-    height:fit-content;
+    height:60em;
+   /* border:2px solid black; */
     padding:10px;
     font-weight: lighter;
     
@@ -391,7 +351,7 @@ height: 50%;
 
 
 
-/* Mobiles less than and equal to 412 screen size  */
+/*412 screen size  */
 @media all and (max-width:412px){
 
 
@@ -408,20 +368,21 @@ h1{
 }
 .main-wrapper{
     display:grid;
-    grid-template-rows: 1fr;
+    grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr ;
     grid-gap:5px;
     box-sizing: border-box;
     border-radius: 5px;
     margin:3em auto;
     width:100%; 
-    height:fit-content;
-    height: auto;
+    height:60em;
     padding:10px;
     font-weight: lighter;
     
     }
-
+.main-wrapper{
+    width:100%;  
+}
 .map-section{
     margin:0px auto;
     width:100%; 
