--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ body{
     display: block;
     width: 100%;
     height:10em;
-    background-image: linear-gradient(90deg,cornflowerblue, rgb(2, 2, 133)); 
+    background:rgb(2, 2, 133); 
     color: white;
     border-radius: 0px 0px 5px 5px;
 }
@@ -34,10 +34,9 @@ h1{
 
 .logo-img{
 float: left;
-width:100px;
-height:100px;
-border-radius: 50%;
-margin:3.5em auto;
+width:80px;
+height:80px;
+margin:4em auto;
 }
 .main-wrapper{
 display:grid;
@@ -53,33 +52,6 @@ padding:10px;
 font-weight: lighter;
 
 }
-/*Loader*/
-.loader {
-  position: absolute;
-  z-index: 1;
-  display: none;
-  border: 16px solid #f3f3f3;
-  border-radius: 50%;
-  border-top: 16px solid #3498db;
-  width: 120px;
-  height: 120px;
-  margin: -70px auto;
-  margin-left:350px;
-  -webkit-animation: spin 2s linear infinite; /* Safari */
-  animation: spin 2s linear infinite;
-}
-
-/* Safari */
-@-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-/*Loader ends*/
 .map-section{
    color:white;
     border-radius: 5px;
