--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,7 @@ body{
 
 h1{
      width: auto;
+     height: 5px;
     font-size: 5em;
     float: left;
     color: white;
@@ -55,12 +56,15 @@ font-weight: lighter;
 .map-section{
    color:white;
    border-radius: 5px;
+   margin-top:0px;
+   padding: 0px;
+
    
 }
 .map{
     width: 100%;
     height:400px;
-  
+    margin-top:0px;
 }
 
 .search-section{
@@ -77,8 +81,6 @@ font-weight: lighter;
     width: 80%;
     height: auto;
     margin:50px auto;
-   
-  
 }
 .weather div{
     border:1px solid white;
@@ -89,7 +91,6 @@ font-weight: lighter;
 .pop-up{
     display:none;
 }
-
 
 input {
    width:30em;
@@ -158,13 +159,20 @@ i{
 /* Toggle button */
 .switch {
     position: relative;
-    display: inline-block;
     width: 40px;
     height: 17px;
     float: right;
   }
-  .Celsius{
+  .Celsius {
+      margin-top: 20px;
       float: left;
+  }
+  .temperature-result{
+margin-top:20px;
+
+  }
+  .reduce-size{
+      font-size: 0.97em;
   }
   
   .switch input { 
@@ -276,7 +284,7 @@ i{
    transition: 1s ease;
      
   }
-  .allow:hover{
+  .appear:hover{
       display: block;
       width: 100%;
       height: 400px;
@@ -504,6 +512,15 @@ input {
     width:100%;
     height:250px; 
     border-radius: 15pX 0px; 
+}
+.social-media a{
+    font-size: 0.7em;
+}
+.support a{
+    font-size: 0.7em;
+}
+.footer-3 a>i{
+    font-size:2.5em;
 }
 
 .footer{
