finish rearranging the layout

--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ body{
     font-family:'Public Sans', sans-serif 'Noto Serif', serif;
 
 }
+
 .header{
     display: block;
     width: 100%;
@@ -57,7 +58,7 @@ box-sizing: border-box;
 border-radius: 5px;
 margin:0 auto;
 width:100%; 
-height:fit-content;
+height:100%;
 padding:10px;
 font-weight: lighter;
 
@@ -103,6 +104,7 @@ font-weight: lighter;
 }
 .pop-up{
     display:block;
+    height: 100%;
     box-shadow: -4px 6px 12px #ccc;
     /* border: 2px solid red */
 }
@@ -383,7 +385,7 @@ h1{
     border-radius: 5px;
     margin:0 auto;
     width:100%; 
-    height:fit-content;
+    height:100%;
     padding:10px;
     font-weight: lighter;
     
@@ -421,8 +423,6 @@ height: 50%;
 }
 .weather{
     display:grid;
-    /* grid-row:repeat(autofit,Minmax(100px,1fr));
-    grid-auto-columns: 2fr 2fr 2fr 2fr; */
     grid-template-columns:1fr 1fr ;
     grid-template-rows: 1fr 1fr 1fr;
     grid-gap: 15px;
@@ -475,7 +475,7 @@ h1{
     border-radius: 5px;
     margin:0 auto;
     max-width:100%; 
-    height:fit-content;
+    height:100%;
     padding:5px;
     font-weight: lighter;
     }
@@ -516,8 +516,6 @@ input {
 
 .weather{
     display:grid;
-    /* grid-row:repeat(autofit,Minmax(100px,1fr));
-    grid-auto-columns: 2fr 2fr 2fr 2fr; */
     grid-template-columns:1fr 1fr 1fr ;
     grid-template-rows: 1fr 1fr;
     grid-gap: 15px;
@@ -525,6 +523,7 @@ input {
     padding:10px;
     padding-right:10px;
     margin:0.2em auto;
+    box-sizing: border-box;
     /* border: 2px solid green; */
   
 }
