--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@ body{
     display: block;
     width: 100%;
     height:3em;
+  position:fixed;
     background:#eee; 
     color: #000;
     border-radius: 0px 0px 5px 5px;
